# KindleRSS

./: .gitignore  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SETUP_EN.md  KINDLE_SETUP.md  KINDLE_SETUP_EN.md  README.md  README_EN.md  action.yml  config.example.yaml  cron_setup.sh  email_config.example.yaml  i18n_utils.py  main.py  pyproject.toml  rss_and_send.py  send_to_kindle.py
.github/workflows/: rss_to_kindle.yml
docs/: converter.html  index.html
docs/en/: converter.html  index.html
i18n/: en.yaml  zh.yaml
locale/: kindle_rss.pot
locale/en_US/LC_MESSAGES/: kindle_rss.mo  kindle_rss.po
locale/zh_CN/LC_MESSAGES/: kindle_rss.mo  kindle_rss.po
src/: main.py  rss_and_send.py  send_to_kindle.py
tests/: conftest.py  test_article_conversion.py
tests/fixtures/: perennids_meteor_shower.html
tests/snapshots/: test_meteor_shower_css_selector.html  test_meteor_shower_readability.html  test_meteor_shower_trafilatura.html
