[project]
name = "kindle-rss"
version = "0.1.0"
description = "Convert RSS feeds to EPUB e-books and automatically send them to your Kindle device"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["kindle", "rss", "epub", "ebook", "automation"]
dependencies = [
    "pyyaml>=6.0",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "ebooklib>=0.18",
    "pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "lxml>=4.9.3",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
kindle-rss = "main:main"
kindle-rss-send = "send_to_kindle:main"
kindle-rss-and-send = "rss_and_send:main"

[project.urls]
Homepage = "https://github.com/ZRui-C/KindleRSS"
Repository = "https://github.com/ZRui-C/KindleRSS"
Issues = "https://github.com/ZRui-C/KindleRSS/issues"
